--- a/.github/workflow/deploy.yml
+++ b/.github/workflow/deploy.yml
@@ -19,20 +19,20 @@ jobs:
         with:
           node-version: 20.x
           cache: npm
-          cache-dependency-path: humanoid-robotics/package-lock.json
+          cache-dependency-path: PHYSICAL-AI-HUMANOID-ROBOTICS-TEXTBOOK/package-lock.json
 
       - name: Install dependencies
-        working-directory: humanoid-robotics
+        working-directory: PHYSICAL-AI-HUMANOID-ROBOTICS-TEXTBOOK
         run: npm ci
 
       - name: Build website
-        working-directory: humanoid-robotics
+        working-directory: PHYSICAL-AI-HUMANOID-ROBOTICS-TEXTBOOK
         run: npm run build
 
       - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: humanoid-robotics/build
+          path: PHYSICAL-AI-HUMANOID-ROBOTICS-TEXTBOOK/build
 
   deploy:
     name: Deploy to GitHub Pages
@@ -51,3 +51,4 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+
