--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@
 .env.test.local
 .env.production.local
 .mcp.json
+.env
+.env.*
 
 npm-debug.log*
 yarn-debug.log*
@@ -46,3 +48,33 @@ Thumbs.db
 *.swp
 .vscode/
 .idea/
+
+# Database files
+*.db
+*.db-journal
+
+# Backend files to ignore
+backend/chatbot.db
+backend/src/__pycache__/
+backend/src/api/__pycache__/
+backend/src/models/__pycache__/
+backend/src/services/__pycache__/
+backend/src/db/__pycache__/
+backend/src/config/__pycache__/
+backend/src/logging_config/__pycache__/
+backend/src/qdrant_service/__pycache__/
+backend/.env
+
+# Python virtual environments (if any)
+env/
+venv/
+venv*/
+.venv
+.venv*/
+
+# Additional Python files
+*.pyc
+__pycache__/
+*.pyo
+*.pyd
+.Python
