--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,12 +3,16 @@ uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 qdrant-client==1.8.0
 groq==0.37.1
-psycopg2-binary==2.9.9
 python-dotenv==1.0.0
-pydantic==2.5.0
+pydantic>=1.10.8
 pydantic-settings==2.1.0
 uuid==1.30
 markdown==3.5.1
 beautifulsoup4==4.12.2
 alembic==1.13.1
 sqlalchemy==2.0.23
+aiosqlite==0.19.0
+sentence-transformers==2.2.2
+torch==2.0.0
+transformers==4.35.0
+numpy==1.24.3
