--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@docusaurus/core": "^3.0.0",
     "@docusaurus/preset-classic": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
+    "axios": "^1.13.2",
     "clsx": "^2.1.0",
     "lodash": "^4.17.21",
     "prism-react-renderer": "^2.4.1",
